<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.jh3nd3rs0n</groupId>
	<artifactId>jargyle</artifactId>
	<version>5.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Jargyle</name>
	<url>https://jh3nd3rs0n.github.io/jargyle</url>
	<description>SOCKS5 API and server</description>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>
				https://raw.githubusercontent.com/jh3nd3rs0n/jargyle/master/LICENSE</url>
		</license>
	</licenses>
	<organization>
		<name>jh3nd3rs0n</name>
		<url>https://github.com/jh3nd3rs0n</url>
	</organization>
	<developers>
		<developer>
			<id>jh3nd3rs0n</id>
			<name>Jonathan Henderson</name>
			<email>j0n4th4n.h3nd3rs0n@gmail.com</email>
			<organization>jh3nd3rs0n</organization>
			<organizationUrl>https://github.com/jh3nd3rs0n</organizationUrl>
		</developer>
	</developers>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/jh3nd3rs0n/jargyle/issues</url>
	</issueManagement>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.version>4.13.2</junit.version>
		<slf4j.version>2.0.12</slf4j.version>
		<maven.javadoc.skippedModules>
			echo,echo-performance-test,jargyle-cli,test-help
		</maven.javadoc.skippedModules>
		<docsDirectory>${project.basedir}${file.separator}docs</docsDirectory>
		<jacoco.skip>true</jacoco.skip>
		<sonar.organization>jh3nd3rs0n</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.coverage.jacoco.xmlReportPaths>
			target/site/jacoco-aggregate/jacoco.xml
		</sonar.coverage.jacoco.xmlReportPaths>
	</properties>
	<distributionManagement>
		<site>
			<id>docs</id>
			<url>file://${docsDirectory}</url>
		</site>
		<repository>
			<id>github-jh3nd3rs0n-jargyle</id>
			<name>GitHub jh3nd3rs0n Apache Maven Packages for Jargyle</name>
			<url>https://maven.pkg.github.com/jh3nd3rs0n/jargyle</url>
		</repository>
	</distributionManagement>
	<profiles>
		<profile>
			<id>coverage</id>
			<properties>
				<jacoco.skip>false</jacoco.skip>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.8.7</version>
						<executions>
							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>prepare-agent-integration</id>
								<goals>
									<goal>prepare-agent-integration</goal>
								</goals>
							</execution>
							<execution>
								<id>report</id>
								<goals>
									<goal>report</goal>
								</goals>
								<configuration>
									<formats>
										<format>XML</format>
									</formats>
								</configuration>
							</execution>
							<execution>
								<id>report-integration</id>
								<goals>
									<goal>report-integration</goal>
								</goals>
								<configuration>
									<formats>
										<format>XML</format>
									</formats>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.4.1</version>
					<executions>
						<execution>
							<id>enforce-maven</id>
							<goals>
								<goal>enforce</goal>
							</goals>
							<configuration>
								<rules>
									<requireMavenVersion>
										<version>[3.3.9,)</version>
									</requireMavenVersion>
								</rules>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<source>1.9</source>
						<target>1.9</target>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
					<configuration>
						<archive>
							<manifest>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
							</manifest>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>3.1.2</version>
					<executions>
						<execution>
							<id>integration-test</id>
							<goals>
								<goal>integration-test</goal>
							</goals>
						</execution>
						<execution>
							<id>verify</id>
							<goals>
								<goal>verify</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.6.0</version>
					<configuration>
						<descriptors>
							<descriptor>src/assembly/bin.xml</descriptor>
						</descriptors>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>4.0.0-M11</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
				<reportSets>
					<reportSet>
						<id>aggregate</id>
						<inherited>false</inherited>
						<reports>
							<report>aggregate</report>
						</reports>
					</reportSet>
					<reportSet>
						<id>default</id>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.5.0</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>index</report>
							<report>summary</report>
							<report>licenses</report>
							<report>dependency-info</report>
							<report>issue-management</report>
							<report>dependencies</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>
	<modules>
		<module>test-help</module>
		<module>jargyle-internal</module>
		<module>jargyle-common</module>
		<module>jargyle-protocolbase</module>
		<module>jargyle-client</module>
		<module>jargyle-server</module>
		<module>echo</module>
		<module>echo-performance-test</module>
		<module>jargyle-cli</module>
		<module>jargyle-report-aggregate</module>
		<module>jargyle-distribution</module>
	</modules>
</project>
